--- a/packages/stencil-library/src/themes/verite.css
+++ b/packages/stencil-library/src/themes/verite.css
@@ -18,6 +18,8 @@
   --transparent: 0 0% 100% / 0;
   --card-padding: 1.5rem;
   --box-shadow: inset 0 1px 2px hsl(var(--foreground) / 0.1);
+  --toast-width: 388px;
+  --toast-padding: 1rem;
 }
 
 .dark {
